# pm-box-office

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_amc_core_tables.py  002_collection_jobs.py  003_analysis_views.py  004_audience_snapshots.py  005_ingest_orchestration.py
docs/: postgres_setup.md
docs/papers_ocr/: SSRN-id1782924.pdf_by_PaddleOCR-VL-1.6.md  The RAND J of Economics - 2008 - Einav - Seasonality in the U S motion picture industry-1.pdf_by_PaddleOCR-VL-1.6.md  krider1998.pdf_by_PaddleOCR-VL-1.6.md  ssrn-2209537.pdf_by_PaddleOCR-VL-1.6.md  wiki.pdf_by_PaddleOCR-VL-1.6.md
scripts/: db.py  run_ingest_wikipedia_boxoffice.sh  run_scrape_the_numbers.sh
scripts/accounts/: find_polymarket_movie_accounts.py
scripts/analytics/: __init__.py  train_amc_boxoffice_models.py
scripts/ingest/: collect_amc_showtimes.py  ingest_wikipedia_boxoffice.py  scrape_the_numbers.py
scripts/papers/: recreate_competitive_dynamics.py  recreate_einav_seasonality.py  recreate_prerelease_piracy_boxoffice.py  recreate_search_volume_quality.py  recreate_wikipedia_boxoffice.py
src/pm_box_office/: __init__.py  config.py
tests/: postgres_test_utils.py  test_postgres_wiring.py
tests/analytics/: test_train_amc_boxoffice_models.py
tests/db/: test_alembic_migrations.py  test_postgres_wiring.py
tests/ingest/: test_amc_pipeline.py  test_collect_amc_showtimes.py  test_ingest_wikipedia_boxoffice.py  test_scrape_the_numbers.py
tests/research/: __init__.py
web/: app.py  db_init.py
(+139 files in other folders)
